Running server-side-template-composition

--- a/server-side-template-composition/nginx.conf
+++ b/server-side-template-composition/nginx.conf
@@ -1,5 +1,10 @@
-server {
-    listen 80;
+events {
+
+}
+
+http {
+  server {
+    listen 8080;
     server_name localhost;
 
     root /usr/share/nginx/html;
@@ -7,7 +12,7 @@ server {
     ssi on;
 
     # Redirect / to /browse
-    rewrite ^/$ http://localhost:80/browse redirect;
+    rewrite ^/$ http://localhost:8080/browse redirect;
 
     # Decide which HTML fragment to insert based on the URL
     location /browse {
@@ -17,9 +22,10 @@ server {
       set $PAGE 'order';
     }
     location /profile {
-      set $PAGE 'profile'
+      set $PAGE 'profile';
     }
 
     # All locations should render through index.html
     error_page 404 /index.html;
+  }
 }
